--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_stripe: ^5.1.0
+  pay: ^1.0.11
 
 dev_dependencies:
   flutter_test:
